Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81293

View3D visible false not working with Underlay/Overlay renderMode

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 5.15
    • 5.14.0 RC2
    • Quick: 3D
    • None
    • bfc0bf062cab4a4ebb57952b3e29c682b8c31f4a

    Description

      When View3D has renderMode: View3D.Underlay / View3D.Overlay and visible: false, it still gets rendered. Works with default renderMode. Attached test QML.

      Attachments

        For Gerrit Dashboard: QTBUG-81293
        # Subject Branch Project Status CR V

        Activity

          People

            kagro Kaj Grönholm
            kagro Kaj Grönholm
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes