Fix View3D Underlay/Overlay renderMode visibility

When View3D visible is set to false, don't render it in
Underlay/Overlay renderModes.

Task-number: QTBUG-81293
Change-Id: Iae395037ee35b7fe904b26713f764164036fa11e
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>