src/quick3d/qquick3dscenerenderer_p.h
@@ -173,6 +173,7 @@ public:
     void setViewport(const QRectF &viewport);
 
     void requestRender();
+    void setVisibility(bool visible);
 
 private Q_SLOTS:
     void render();
@@ -182,6 +183,7 @@ private:
     QQuickWindow *m_window = nullptr;
     QQuick3DSGDirectRendererMode m_mode;
     QRectF m_viewport;
+    bool m_isVisible = true;
 };
 
 QT_END_NAMESPACE
